log
Sat 18 May 2024 06:57:16 PM UTC: 
 tests:  0|5
total_score: 0/70
2c113f6
Sat 18 May 2024 07:07:52 PM UTC: 
 sudoku.c | 60 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 60 insertions(+)
 tests:  6|2
total_score: 45/70
879bac0
Sat 18 May 2024 07:08:41 PM UTC: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  7|1
total_score: 55/70
d225b6b
Sat 18 May 2024 07:09:12 PM UTC: 
 sudoku.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:133:13: error: implicit declaration of function ‘isEmpty’; did you mean ‘is_empty’? [-Werror=implicit-function-declaration]
  133 |     while (!isEmpty(s)) {
      |             ^~~~~~~
      |             is_empty
cc1: all warnings being treated as errors
Compilation failed
c5af58a
Sat 18 May 2024 07:09:33 PM UTC: 
 sudoku.c | 19 -------------------
 1 file changed, 19 deletions(-)
 tests:  7|1
total_score: 55/70
5ef5f82
